--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+	overflow-x: hidden;
 }
 input,button,textarea{font-family: inherit;}
 
@@ -1613,9 +1614,10 @@ input{
 @media (max-width: 1023px) {
 	.subscribe {
 		width: 100%;
-		height: 900px;
+		height: 400px;
 	}
 	.subscribe-questions {
+		display: none;
 		width: 100%;
 		height: 500px;
 		align-items: start;
@@ -1706,7 +1708,7 @@ input{
 }
 @media (max-width: 768px) {
 	.subscribe{
-		height: 1060px;
+		height: 460px;
 	}
 	.subscribe-questions-img {
 		display: none;
@@ -1776,8 +1778,20 @@ input{
 	}
 }
 @media (max-width: 475px) {
+	.subscribe{
+		height: 500px;
+	}
 	.subscribe-questions {
-		height: 700px;
+		height: 400px;
+	}
+	.container-subscribe{
+		margin: 0 auto;
+		width: 70%;
+		height: 80%;
+	}
+	.subscribe-block{
+		height: 550px;
+		padding: 40px 0 40px 0;
 	}
 	.subscribe-questions-block-answer-1 {
 		font-size: 0.93rem;
@@ -2011,21 +2025,21 @@ footer{
 }
 @media (max-width: 768px) {
 	footer{
-		height: 950px;
+		height: 800px;
 	}
 	.container-footer{
 		width: 80%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 30px;
+		gap: 25px;
 		height: 100%;
 	}
 	.footer-logo-block {
 		width: 80%;
 	}
 	.footer-logo-logo {
-		margin-top: 62px;
+		margin-top: 35px;
 		width: 250px;
 		height: 78px;
 		margin-bottom: 18px;	
@@ -2037,23 +2051,27 @@ footer{
 		height: 100%;
 	}
 	.footer-block-links {
+		width: 33.3%;
+		margin-top: 0px;
+	}
+	.footer-block-links {
 		width: 80%;
-		margin-top: 42px;
+		margin-top: 35px;
 	}
 	.footer-contacts {
 		width: 80%;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		gap: 15px;
 	}
 	.footer-contacts-title {
-		margin-bottom: 20px;
-		margin-top: 42px;
+		margin-bottom: 5px;
+		margin-top: 0;
 	}
 	.footer-copy {
 		font-size: 0.9375rem;
 		padding: 5% 0 0 30%;
 		background: #EFEED9;
-		margin: 0;
+		margin: 0 auto;
 	}
 }
